--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,17 @@ serde = { version = "1.0.149", features = ["derive"] }
 log = "0.4.17"
 log4rs = "1.2.0"
 text_io = "0.1.12"
-confy = "0.5.1"
 csv = "1.1.6"
 chrono = { version = "0.4.23", features = ["serde"] }
 rust_decimal = "1.27.0"
+reqwest = { version = "0.11.6", features = ["json", "multipart", "stream"] }
+tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
+async-recursion = "1.0.0"
+uuid = "1.2.2"
+tokio-util = { version = "0.7.4", features = ["codec"] }
+
+
+[dependencies.confy]
+features = ["yaml_conf"]
+default-features = false
+version = "0.5.1"
